[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Resources/HUD-theme.tres" type="Theme" id=2]
[ext_resource path="res://Art/Background-Bouncing.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main/HUD.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Main/PlayingField.gd" type="Script" id=6]
[ext_resource path="res://Art/Indicator.png" type="Texture" id=7]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayingField" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource( 6 )

[node name="Targets" type="Node2D" parent="PlayingField"]

[node name="Player" parent="PlayingField" instance=ExtResource( 5 )]
position = Vector2( 960, 540 )

[node name="Bumpers" type="Node2D" parent="PlayingField"]

[node name="Indicator" type="Sprite" parent="PlayingField"]
visible = false
z_index = 10
texture = ExtResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="StartBtn" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.271
margin_top = -286.063
margin_right = -163.271
margin_bottom = -220.063
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLbl" type="Label" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -332.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "999,999,999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLbl" type="Label" parent="HUD"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 285.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "HH:MM:SS"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLbl" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -93.0
margin_right = 960.0
margin_bottom = 93.0
theme = ExtResource( 2 )
text = "I'm a Message!
On TWO lines!
Or is that THREE lines?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayBtn" type="Button" parent="HUD"]
visible = false
margin_left = 597.0
margin_top = 700.0
margin_right = 920.0
margin_bottom = 766.0
theme = ExtResource( 2 )
text = "Replay level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBtn" type="Button" parent="HUD"]
visible = false
margin_left = 1000.0
margin_top = 700.0
margin_right = 1323.0
margin_bottom = 766.0
theme = ExtResource( 2 )
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HUD/StartBtn" to="HUD" method="_on_StartBtn_pressed"]
[connection signal="pressed" from="HUD/ReplayBtn" to="HUD" method="_on_ReplayBtn_pressed"]
[connection signal="pressed" from="HUD/NextBtn" to="HUD" method="_on_NextBtn_pressed"]
